[package]
categories = ["command-line-utilities"]
description = "Starter template for CLI applications"
documentation = "https://docs.rs/cli-app-template"
edition = "2024"
homepage = "https://github.com/tobx/rust-cli-app-template"
license = "MIT"
license-file = "LICENSE"
name = "cli-app-template"
readme = "README.md"
repository = "https://github.com/tobx/rust-cli-app-template"
version = "0.2.4"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
config = "0.15.11"
directories = "6.0.0"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
